syntax = "proto3";

service GamesService {
    rpc GetGame(GetGameRequest) returns (GetGameResponse);
}

message GetGameRequest {
    string gameID = 1;
    string playerConnectionID = 2;
}

message GetGameResponse {
    string gameID = 1;
    repeated GamePoint board = 2;
    repeated GamePoint opponentBoard = 3;
    int32 shipCounts = 4;
    int32 opponentShipCounts = 5;
}

message GamePoint {
    int32 x = 1;
    int32 y = 2;
    int32 state = 3;
}